# Mathics3-pygments

./: .pre-commit-config.yaml  CHANGES.rst  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: isort-and-black-checks.yml  macos.yml  ubuntu.yml  windows.yml
admin-tools/: make-JSON-tables.sh  make-dist.sh
mathics_pygments/: builtins.py  lexer.py  version.py
mathics_pygments/data/: .gitignore  mma-tables.json
mathics_pygments/generate/: build_pygments_tables.py
tests/: test_lexer.py
