[build-system]
requires = [
    "setuptools>=70.0.0", # CVE-2024-38335 recommends this
    # needed for building tables for the sdist:
    "PyYAML",
    "click",
]
build-backend = "setuptools.build_meta"

[project]
name = "Mathics3_pygments"
description = "Mathics3/Mathematica/Wolfram Language Lexer for Pygments"
dependencies = [
    "Pygments >= 2.9",     # Used in mathics-generate-json-table
    "Mathics3_Scanner>=10.0.0",
    "click",      # Using in CLI: build_pygments_tables.py
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = ["Mathematica", "Syntax highlighting"]
maintainers = [
    {name = "Mathics3 Group"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Text Processing",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://mathics.org/"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = [
    "mathics_pygments",
    "mathics_pygments.generate",
]

[tool.setuptools.package-data]
"mathics_pygments" = [
    "data/mma-tables.json",
    "data/mma-tables-new.json", # Not used yet, but eventually will replace mma-tables.json
]

[tool.setuptools.dynamic]
version = {attr = "mathics_pygments.version.__version__"}
